Jenkins file change

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,17 @@
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
+				<configuration>
+					<cloudHubDeployment>
+						<username>baba_dev</username>
+						<password>Baba.dev@123</password>
+						<environment>Sandbox</environment>
+						<workers>1</workers>
+						<workerType>Micro</workerType>
+						<applicationName>TimeZoneApi-v1</applicationName>
+						<muleVersion>4.4.0</muleVersion>
+					</cloudHubDeployment>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.mulesoft.munit.tools</groupId>
